lunar-basecamp/mdapi/lbo/objects/Expedition_Gear__c.object
<CustomObject>
    <description>Junction object linking expedition bookings to gear items.</description>
    <label>Expedition Gear</label>
    <nameField>
        <displayFormat>EG-{0000}</displayFormat>
        <label>Expedition Gear Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expedition Gear</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Expedition_Booking__c</fullName>
        <label>Expedition Booking</label>
        <referenceTo>Expedition_Booking__c</referenceTo>
        <relationshipLabel>Expedition Gear</relationshipLabel>
        <relationshipName>Expedition_Gear</relationshipName>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gear_Item__c</fullName>
        <label>Gear Item</label>
        <referenceTo>Gear_Item__c</referenceTo>
        <relationshipLabel>Expedition Gear Items</relationshipLabel>
        <relationshipName>Expedition_Gear_Items</relationshipName>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>